# resolvr

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  DATA_SCHEMAS.md  PIPELINE.md  README.md  UI.md  VERIS_SETUP.md  divorce_lawyer_hackathon.docx  divorce_lawyer_premium_ui.html  env.example  package-lock.json  skills-lock.json  vercel.json
.claude/skills/: agent-integration
backend/: exceptions.py  main.py  models.py  pipeline.py  prompts.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  revenue_agent.py  risk_agent.py  scenario_profile.py
backend/data/: seed.json  transcript_a.json  transcript_b.json
backend/pipeline_stages/: brief.py  forensics.py  grounding.py  simulation.py
backend/scripts/: generate_mock_transcripts.py
backend/utils/: baseten_client.py  json_utils.py  vercel_blob.py  youcom_client.py
frontend/: package-lock.json  package.json
frontend/.veris/: config.yaml  veris.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/case/[id]/: route.ts
frontend/app/api/run/: route.ts
frontend/components/: ActNav.tsx  AgentCards.tsx  BriefCard.tsx  DivergenceTable.tsx  Docket.tsx  GroundingStatus.tsx  PathCards.tsx  PipelineBar.tsx  SectionHeader.tsx  TopBar.tsx
frontend/hooks/: usePipeline.ts
veris/agent_a/: Dockerfile  pyproject.toml  veris.yaml
veris/agent_a/revenue_agent/: main.py  tools.py
veris/agent_b/: Dockerfile  pyproject.toml  requirements.txt  veris.yaml
veris/agent_b/risk_agent/: main.py  tools.py
