[project]
name = "resolvr-backend"
version = "0.1.0"
description = "Resolvr arbitration backend — multi-agent conflict resolution pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "openai==1.54.3",
]

[tool.uv]
package = false
